--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,6 +136,8 @@ CurrentPosGridSize=1
 CurrentRotGridSize=0
 CurrentScalingGridSize=1
 SnapScaleEnabled=False
+CameraSpeed=3
+GridEnabled=False
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -175,7 +177,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.160714
+ContentBrowserTab1.ThumbnailSizeScale=0.000000
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -206,7 +208,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/PersistentLevel
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -217,30 +219,28 @@ ToolbarOpenBPClass.CurrentViewType=0
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/LadderClimb/Ladder_BP.Ladder_BP
-OpenAssetsAtExit=/Game/Player/ThirdPersonCharacter.ThirdPersonCharacter
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Player/ThirdPersonCharacter
-MRUItem2=/Game/LadderClimb/Ladder_BP
-MRUItem3=/Game/Player/PlayerCharacter
-MRUItem4=/Game/Player/animatethishomie
-MRUItem5=/Game/LadderClimb/SewerLadderV2
-MRUItem6=/Game/Dialogue/DialogueWidget
-MRUItem7=/Game/Movies/Cutscene2
-MRUItem8=/Game/Movies/Cutscene1
-MRUItem9=/Game/Movies/scene1source
-MRUItem10=/Game/Movies/scene2source
-MRUItem11=/Game/Movies/NewFileMediaSource2
-MRUItem12=/Game/Movies/NewFileMediaSource
-MRUItem13=/Game/Levels/PersistentLevel
-MRUItem14=/Game/Blueprints/Sunflower_GROWTH
-MRUItem15=/Game/Sewer/gatee
-MRUItem16=/Game/Blueprints/PLant
-MRUItem17=/Game/Geometry/Meshes/Plants/ReactivePlant
-MRUItem18=/Game/Sewer/Lever
-MRUItem19=/Game/Sewer/SewerTrack
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Blueprints/MySaveGame
+MRUItem2=/Game/Movies/Cutscene1
+MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem4=/Game/Player/ThirdPersonCharacter
+MRUItem5=/Game/LadderClimb/Ladder_BP
+MRUItem6=/Game/Levels/NewSewer
+MRUItem7=/Game/Player/PlayerCharacter
+MRUItem8=/Game/Player/animatethishomie
+MRUItem9=/Game/LadderClimb/SewerLadderV2
+MRUItem10=/Game/Dialogue/DialogueWidget
+MRUItem11=/Game/Movies/Cutscene2
+MRUItem12=/Game/Movies/scene1source
+MRUItem13=/Game/Movies/scene2source
+MRUItem14=/Game/Movies/NewFileMediaSource2
+MRUItem15=/Game/Movies/NewFileMediaSource
+MRUItem16=/Game/Blueprints/Sunflower_GROWTH
+MRUItem17=/Game/Sewer/gatee
+MRUItem18=/Game/Blueprints/PLant
+MRUItem19=/Game/Geometry/Meshes/Plants/ReactivePlant
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2938,7 +2938,7 @@ FbxExportOption.Animation=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object=
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -2988,7 +2988,7 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3652,7 +3652,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=186.000 Y=10.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1560.000 Y=924.000
+WindowSize=X=1565.000 Y=929.000
 None=======
 InitiallyMaximized=True
 
@@ -3671,7 +3671,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=../../../../../../Users/jedie/OneDrive/Documents/GitHub/Serotopia V3/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5242,8 +5242,8 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/PersistentLevel
+MRUItem0=/Game/Levels/PersistentLevel
+MRUItem1=/Game/Levels/NewSewer
 MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/NewMap
 MRUItem4=/Game/Levels/Bubbleopolis
@@ -5588,7 +5588,7 @@ K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,
 GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Brush=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-PrimitiveComponent=
+PrimitiveComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 Actor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 ThirdPersonCharacter_C=
 AO1E_C=
@@ -5662,7 +5662,7 @@ StaircaseBP_C=Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,
 DisappearBridge1_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 DisappearBridge_C=
 RedPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-gatee_C=
+gatee_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 NewSewer_C=
 TargetPoint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 BluePaintPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
@@ -5687,6 +5687,9 @@ PLant_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Renderi
 ReactivePlant_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst.MM_Sewer_Floor_Inst;
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor.MM_Sewer_Floor;
+RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst1.MM_Sewer_Floor_Inst1;
 RecentlyPlaced=/Game/LadderClimb/Ladder_BP.Ladder_BP;
 RecentlyPlaced=/Game/Blueprints/PLant.PLant;
 RecentlyPlaced=/Game/Sewer/Lever.Lever;
@@ -5704,9 +5707,6 @@ RecentlyPlaced=/Game/BubbleGang/Boys/WalkingBubbleBoy_Anim_mixamo_com.WalkingBub
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprints/Pickups/BluePaintPickup_Actor.BluePaintPickup_Actor;
 RecentlyPlaced=/Game/LadderClimb/SewerLadderV2.SewerLadderV2;
-RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor_Inst.MM_Sewer_Floor_Inst;
-RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_Floor/MM_Sewer_Floor.MM_Sewer_Floor;
-RecentlyPlaced=/Game/Sewer/Sewer_textures/Sewer_wall/MM_Sewer_Wall.MM_Sewer_Wall;
 None=======
 BoxComponent=BoxComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
@@ -6110,7 +6110,7 @@ Property=0.500000
 Value=1.000000
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
