--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -137,7 +137,6 @@ CurrentRotGridSize=0
 CurrentScalingGridSize=1
 SnapScaleEnabled=False
 CameraSpeed=3
-GridEnabled=False
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -208,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/PersistentLevel
+LastLevel=/Game/Levels/NewSewer
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -221,24 +220,24 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Blueprints/MySaveGame
-MRUItem2=/Game/Movies/Cutscene1
-MRUItem3=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem4=/Game/Player/ThirdPersonCharacter
-MRUItem5=/Game/LadderClimb/Ladder_BP
-MRUItem6=/Game/Levels/NewSewer
-MRUItem7=/Game/Player/PlayerCharacter
-MRUItem8=/Game/Player/animatethishomie
-MRUItem9=/Game/LadderClimb/SewerLadderV2
-MRUItem10=/Game/Dialogue/DialogueWidget
-MRUItem11=/Game/Movies/Cutscene2
-MRUItem12=/Game/Movies/scene1source
-MRUItem13=/Game/Movies/scene2source
-MRUItem14=/Game/Movies/NewFileMediaSource2
-MRUItem15=/Game/Movies/NewFileMediaSource
-MRUItem16=/Game/Blueprints/Sunflower_GROWTH
-MRUItem17=/Game/Sewer/gatee
+MRUItem0=/Game/Sewer/gatee
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Levels/PersistentLevel
+MRUItem3=/Game/Blueprints/MySaveGame
+MRUItem4=/Game/Movies/Cutscene1
+MRUItem5=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem6=/Game/Player/ThirdPersonCharacter
+MRUItem7=/Game/LadderClimb/Ladder_BP
+MRUItem8=/Game/Player/PlayerCharacter
+MRUItem9=/Game/Player/animatethishomie
+MRUItem10=/Game/LadderClimb/SewerLadderV2
+MRUItem11=/Game/Dialogue/DialogueWidget
+MRUItem12=/Game/Movies/Cutscene2
+MRUItem13=/Game/Movies/scene1source
+MRUItem14=/Game/Movies/scene2source
+MRUItem15=/Game/Movies/NewFileMediaSource2
+MRUItem16=/Game/Movies/NewFileMediaSource
+MRUItem17=/Game/Blueprints/Sunflower_GROWTH
 MRUItem18=/Game/Blueprints/PLant
 MRUItem19=/Game/Geometry/Meshes/Plants/ReactivePlant
 
@@ -2938,7 +2937,7 @@ FbxExportOption.Animation=True
 
 [DetailPropertyExpansion]
 SoundClass="\"Object.SoundClass.Properties\" \"Object.SoundClass.ChildClasses\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SoundMix="\"Object.SoundClasses.SoundClassEffects\" "
 ThirdPersonCharacter_C="\"Object.Default.Light\" \"Object.Default.Dark\" \"Object.Default.LightRotation\" \"Object.Default.DarkRotation\" \"Object.Default.LightForwardVector\" \"Object.Default.DarkForwardVector\" \"Object.Default.LightLocation\" \"Object.Default.DarkLocation\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.PivotOffset\" "
 ThirdPersonCharacter_C=
@@ -3100,6 +3099,7 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Cutscene1_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Cutscene2_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 DialogueWidget_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+gatee_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3652,7 +3652,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=186.000 Y=10.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1565.000 Y=929.000
+WindowSize=X=1570.000 Y=934.000
 None=======
 InitiallyMaximized=True
 
@@ -5242,8 +5242,8 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/PersistentLevel
-MRUItem1=/Game/Levels/NewSewer
+MRUItem0=/Game/Levels/NewSewer
+MRUItem1=/Game/Levels/PersistentLevel
 MRUItem2=/Game/Levels/Forest
 MRUItem3=/Game/Levels/NewMap
 MRUItem4=/Game/Levels/Bubbleopolis
