--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ CurrentPosGridSize=1
 CurrentRotGridSize=0
 CurrentScalingGridSize=1
 SnapScaleEnabled=False
-CameraSpeed=3
+CameraSpeed=5
 
 [WidgetTemplatesExpanded]
 Editor=False
@@ -154,7 +154,7 @@ Common=False
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Levels
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Castle/Castle_Level
 None=======
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
@@ -176,7 +176,7 @@ ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
-ContentBrowserTab1.ThumbnailSizeScale=0.000000
+ContentBrowserTab1.ThumbnailSizeScale=0.169643
 ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000
 SequenceBrowser.ActiveTypeFilters=
@@ -207,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/NewSewer
+LastLevel=/Game/Levels/Castle
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -220,26 +220,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Sewer/gatee
-MRUItem2=/Game/Levels/PersistentLevel
-MRUItem3=/Game/Blueprints/MySaveGame
-MRUItem4=/Game/Movies/Cutscene1
-MRUItem5=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem6=/Game/Player/ThirdPersonCharacter
-MRUItem7=/Game/LadderClimb/Ladder_BP
-MRUItem8=/Game/Player/PlayerCharacter
-MRUItem9=/Game/Player/animatethishomie
-MRUItem10=/Game/LadderClimb/SewerLadderV2
-MRUItem11=/Game/Dialogue/DialogueWidget
-MRUItem12=/Game/Movies/Cutscene2
-MRUItem13=/Game/Movies/scene1source
-MRUItem14=/Game/Movies/scene2source
-MRUItem15=/Game/Movies/NewFileMediaSource2
-MRUItem16=/Game/Movies/NewFileMediaSource
-MRUItem17=/Game/Blueprints/Sunflower_GROWTH
-MRUItem18=/Game/Blueprints/PLant
-MRUItem19=/Game/Geometry/Meshes/Plants/ReactivePlant
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Sewer/gatee
+MRUItem3=/Game/Levels/PersistentLevel
+MRUItem4=/Game/Blueprints/MySaveGame
+MRUItem5=/Game/Movies/Cutscene1
+MRUItem6=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem7=/Game/Player/ThirdPersonCharacter
+MRUItem8=/Game/LadderClimb/Ladder_BP
+MRUItem9=/Game/Player/PlayerCharacter
+MRUItem10=/Game/Player/animatethishomie
+MRUItem11=/Game/LadderClimb/SewerLadderV2
+MRUItem12=/Game/Dialogue/DialogueWidget
+MRUItem13=/Game/Movies/Cutscene2
+MRUItem14=/Game/Movies/scene1source
+MRUItem15=/Game/Movies/scene2source
+MRUItem16=/Game/Movies/NewFileMediaSource2
+MRUItem17=/Game/Movies/NewFileMediaSource
+MRUItem18=/Game/Blueprints/Sunflower_GROWTH
+MRUItem19=/Game/Blueprints/PLant
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3671,7 +3671,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
 UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia/Serotopia_Grey_1 4.26/Content/Levels
-UNR=D:/ihatethis/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
+UNR=../../../../../../Users/drewb/Documents/Serotopia Game/Serotopia Game/Serotopia/Sero_4.26/Serotopia_Grey_1 4.26/Content/Levels
 None=======
 BRUSH=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
 FBX=D:/Unreal Projects/Serotopia/Serotopia_Grey_1/Content/
@@ -5242,14 +5242,14 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/NewSewer
-MRUItem1=/Game/Levels/Forest
-MRUItem2=/Game/Levels/PersistentLevel
-MRUItem3=/Game/Levels/NewMap
-MRUItem4=/Game/Levels/Bubbleopolis
-MRUItem5=/Game/Movies/CutsceneLvl2
-MRUItem6=/Game/Movies/CutsceneLvl1
-MRUItem7=/Game/Levels/Castle
+MRUItem0=/Game/Levels/Castle
+MRUItem1=/Game/Levels/NewSewer
+MRUItem2=/Game/Levels/Forest
+MRUItem3=/Game/Levels/PersistentLevel
+MRUItem4=/Game/Levels/NewMap
+MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem6=/Game/Movies/CutsceneLvl2
+MRUItem7=/Game/Movies/CutsceneLvl1
 MRUItem8=/Game/Levels/MainMenu
 MRUItem9=/Game/Levels/ForestBackup
 MRUItem10=/Game/Levels/Sewer
