--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Castle
+LastLevel=/Game/Levels/Bubbleopolis
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -216,30 +216,30 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Sewer/gatee
-MRUItem3=/Game/Levels/PersistentLevel
-MRUItem4=/Game/Blueprints/MySaveGame
-MRUItem5=/Game/Movies/Cutscene1
-MRUItem6=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem7=/Game/Player/ThirdPersonCharacter
-MRUItem8=/Game/LadderClimb/Ladder_BP
-MRUItem9=/Game/Player/PlayerCharacter
-MRUItem10=/Game/Player/animatethishomie
-MRUItem11=/Game/LadderClimb/SewerLadderV2
-MRUItem12=/Game/Dialogue/DialogueWidget
-MRUItem13=/Game/Movies/Cutscene2
-MRUItem14=/Game/Movies/scene1source
-MRUItem15=/Game/Movies/scene2source
-MRUItem16=/Game/Movies/NewFileMediaSource2
-MRUItem17=/Game/Movies/NewFileMediaSource
-MRUItem18=/Game/Blueprints/Sunflower_GROWTH
-MRUItem19=/Game/Blueprints/PLant
+MRUItem0=/Game/BubbleWands/Wand_Fractal
+MRUItem1=/Game/Materials/Mat_Bubble_Wand_Fractal_Inst
+MRUItem2=/Game/BubbleWands/Wand_Wheel
+MRUItem3=/Game/Materials/Mat_Bubble_Wand_Circle_Inst
+MRUItem4=/Game/BubbleWands/Wand_Butterfly
+MRUItem5=/Game/Materials/Mat_Bubble_Wand_Butterfly_Inst
+MRUItem6=/Game/BubbleWands/Wand_Trio
+MRUItem7=/Game/BubbleWands/Wand_Sun
+MRUItem8=/Game/BubbleWands/Wand_Stack
+MRUItem9=/Game/BubbleWands/Wand_Flower
+MRUItem10=/Game/BubbleWands/Wand_Diamond
+MRUItem11=/Game/BubbleWands/Wand_Bunch
+MRUItem12=/Game/Materials/Mat_Bubble_Wand_Flower_Inst
+MRUItem13=/Game/Materials/Mat_Bubble_Wand_Stack_Inst
+MRUItem14=/Game/Materials/Mat_Bubble_Wand_Diamond_Inst
+MRUItem15=/Game/Materials/Mat_Bubble_Wand_Trio_Inst
+MRUItem16=/Game/Materials/Bubble_Wand_Violet
+MRUItem17=/Game/Materials/Mat_Bubble_Wand_Sun_Inst
+MRUItem18=/Game/Materials/Mat_Bubble_Wand_Yellow_Inst
+MRUItem19=/Game/Materials/Bubble_Wand_Yellow
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -3008,14 +3008,14 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SkeletalMesh=
-StreamableRenderAsset=
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 LODInfoUILayout=
 SkeletalBodySetup="\"Object.AggGeom\" \"Object.AggGeom.SphylElems\" \"Object.AggGeom.SphylElems.SphylElems[0]\" \"Object.AggGeom.SphylElems.SphylElems[0].Rotation\" \"Object.WalkableSlopeOverride\" \"Object.DefaultInstance.WalkableSlopeOverride\" "
 BodySetup=
 BodySetupCore=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-StaticMesh=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.DefaultInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MaterialParameterCollection="\"Object.Material.ScalarParameters\" \"Object.Material.ScalarParameters.ScalarParameters[1]\" \"Object.Material.ScalarParameters.ScalarParameters[2]\" "
 AnimGraphNode_SequencePlayer="\"Object.Settings.SyncGroup\" "
 AnimGraphNode_AssetPlayerBase="\"Object.Settings.SyncGroup\" "
@@ -3068,7 +3068,7 @@ PaperSprite="\"Object.Sprite.SourceUV\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
-MaterialExpressionParameter="\"Object.DefaultValue\" "
+MaterialExpressionParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
 MaterialExpression=
 MaterialEditorInstanceConstant=
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
@@ -3587,6 +3587,20 @@ None=======
 /Game/Movies/Cutscene2.Cutscene2=1
 /Game/LadderClimb/SewerLadderV2.SewerLadderV2=1
 /Game/Player/animatethishomie.animatethishomie=1
+/Game/BubbleWands/Wand_Bunch.Wand_Bunch=1
+/Game/Materials/Mat_Bubble_Wand_Yellow_Inst.Mat_Bubble_Wand_Yellow_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Sun_Inst.Mat_Bubble_Wand_Sun_Inst=1
+/Game/BubbleWands/Wand_Diamond.Wand_Diamond=1
+/Game/Materials/Mat_Bubble_Wand_Diamond_Inst.Mat_Bubble_Wand_Diamond_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Trio_Inst.Mat_Bubble_Wand_Trio_Inst=1
+/Game/BubbleWands/Wand_Stack.Wand_Stack=1
+/Game/Materials/Mat_Bubble_Wand_Stack_Inst.Mat_Bubble_Wand_Stack_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Flower_Inst.Mat_Bubble_Wand_Flower_Inst=1
+/Game/BubbleWands/Wand_Flower.Wand_Flower=1
+/Game/BubbleWands/Wand_Butterfly.Wand_Butterfly=1
+/Game/Materials/Mat_Bubble_Wand_Butterfly_Inst.Mat_Bubble_Wand_Butterfly_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Circle_Inst.Mat_Bubble_Wand_Circle_Inst=1
+/Game/Materials/Mat_Bubble_Wand_Fractal_Inst.Mat_Bubble_Wand_Fractal_Inst=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -5242,12 +5256,12 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Forest
-MRUItem3=/Game/Levels/PersistentLevel
-MRUItem4=/Game/Levels/NewMap
-MRUItem5=/Game/Levels/Bubbleopolis
+MRUItem0=/Game/Levels/Bubbleopolis
+MRUItem1=/Game/Levels/Castle
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/Forest
+MRUItem4=/Game/Levels/PersistentLevel
+MRUItem5=/Game/Levels/NewMap
 MRUItem6=/Game/Movies/CutsceneLvl2
 MRUItem7=/Game/Movies/CutsceneLvl1
 MRUItem8=/Game/Levels/MainMenu
@@ -5257,7 +5271,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5562,7 +5576,7 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 CameraComponent=CameraComponent.PostProcess.Lens,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Glints,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Wave Direction,MaterialEditorInstanceConstant.ParameterGroups.Waves,MaterialEditorInstanceConstant.ParameterGroups.Wall,MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Glints,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Wave Direction,MaterialEditorInstanceConstant.ParameterGroups.Waves,MaterialEditorInstanceConstant.ParameterGroups.Wall,MaterialEditorInstanceConstant.ParameterGroups.Diffuse,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Specular,MaterialEditorInstanceConstant.ParameterGroups.Subsurface,MaterialEditorInstanceConstant.ParameterGroups.WPO,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.General.LightmassSettings,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 MaterialInstanceConstant=
 LinuxTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
 MacTargetSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Move Right,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.Look Up,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Pause,InputSettings.Bindings.ActionMappings.Jump,
@@ -5585,7 +5599,7 @@ BrushComponent=
 Skybox_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 SceneFinish_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
-StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,
+StaticMesh=StaticMesh.ImportSettings.File Path,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Mesh,StaticMesh.Collision.Collision,
 GreenPickup_Actor_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Brush=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
 PrimitiveComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
