forest lighting tweak

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Levels/Forest
-LastLevel=/Game/Levels/Castle
+LastLevel=/Game/Levels/Forest
 None=======
 ContentBrowserTab1.ThumbnailSizeScale=0.026786
 ContentBrowserTab1.CurrentViewType=1
@@ -220,26 +220,26 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Sewer/gatee
-MRUItem4=/Game/Levels/PersistentLevel
-MRUItem5=/Game/Blueprints/MySaveGame
-MRUItem6=/Game/Movies/Cutscene1
-MRUItem7=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem8=/Game/Player/ThirdPersonCharacter
-MRUItem9=/Game/LadderClimb/Ladder_BP
-MRUItem10=/Game/Player/PlayerCharacter
-MRUItem11=/Game/Player/animatethishomie
-MRUItem12=/Game/LadderClimb/SewerLadderV2
-MRUItem13=/Game/Dialogue/DialogueWidget
-MRUItem14=/Game/Movies/Cutscene2
-MRUItem15=/Game/Movies/scene1source
-MRUItem16=/Game/Movies/scene2source
-MRUItem17=/Game/Movies/NewFileMediaSource2
-MRUItem18=/Game/Movies/NewFileMediaSource
-MRUItem19=/Game/Blueprints/Sunflower_GROWTH
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Audio/Music/Wavs/Forest
+MRUItem3=/Game/Levels/NewSewer
+MRUItem4=/Game/Levels/Castle
+MRUItem5=/Game/Sewer/gatee
+MRUItem6=/Game/Levels/PersistentLevel
+MRUItem7=/Game/Blueprints/MySaveGame
+MRUItem8=/Game/Movies/Cutscene1
+MRUItem9=/Game/Blueprints/UI/Widgets/MainMenu
+MRUItem10=/Game/Player/ThirdPersonCharacter
+MRUItem11=/Game/LadderClimb/Ladder_BP
+MRUItem12=/Game/Player/PlayerCharacter
+MRUItem13=/Game/Player/animatethishomie
+MRUItem14=/Game/LadderClimb/SewerLadderV2
+MRUItem15=/Game/Dialogue/DialogueWidget
+MRUItem16=/Game/Movies/Cutscene2
+MRUItem17=/Game/Movies/scene1source
+MRUItem18=/Game/Movies/scene2source
+MRUItem19=/Game/Movies/NewFileMediaSource2
 
 [DetailCategories]
 SoundMix.EQ=True
@@ -2948,7 +2948,7 @@ Pawn=
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 SkyLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Info=
-Info="\"Object.Lightmass.LightmassSettings\" "
+Info="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 None=======
 None=======
 None=======
@@ -2986,8 +2986,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -3066,7 +3066,7 @@ PlayerController=
 Controller=
 PaperSprite="\"Object.Sprite.SourceUV\" "
 SoundCue="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
-SoundBase="\"Object.Voice Management.Voice Management|Priority\" \"Object.Voice Management.Voice Management|Concurrency\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
+SoundBase="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 MaterialExpressionVectorParameter="\"Object.DefaultValue\" \"Object.ChannelNames\" "
 MaterialExpressionParameter="\"Object.DefaultValue\" "
 MaterialExpression=
@@ -3100,6 +3100,7 @@ Cutscene1_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" 
 Cutscene2_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 DialogueWidget_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 gatee_C=
+SoundWave="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voice Management.Voice Management|Priority\" \"Object.Effects.Effects|Source\" \"Object.Effects.Effects|Submix\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Audio/Bubbleopolis_MAster.Bubbleopolis_Master=1
@@ -3587,6 +3588,7 @@ None=======
 /Game/Movies/Cutscene2.Cutscene2=1
 /Game/LadderClimb/SewerLadderV2.SewerLadderV2=1
 /Game/Player/animatethishomie.animatethishomie=1
+/Game/Audio/Music/Wavs/Forest.Forest=1
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3652,7 +3654,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=186.000 Y=10.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1580.000 Y=944.000
+WindowSize=X=1585.000 Y=949.000
 None=======
 InitiallyMaximized=True
 
@@ -5242,10 +5244,10 @@ WorldBrowser.TimeStamp=2021.02.09-23.59.37
 WorldBrowser.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Levels/Castle
-MRUItem1=/Game/Levels/NewSewer
-MRUItem2=/Game/Levels/Bubbleopolis
-MRUItem3=/Game/Levels/Forest
+MRUItem0=/Game/Levels/Forest
+MRUItem1=/Game/Levels/Bubbleopolis
+MRUItem2=/Game/Levels/NewSewer
+MRUItem3=/Game/Levels/Castle
 MRUItem4=/Game/Levels/PersistentLevel
 MRUItem5=/Game/Levels/NewMap
 MRUItem6=/Game/Movies/CutsceneLvl2
@@ -5257,7 +5259,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LightingResults
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
@@ -5575,7 +5577,7 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SceneComponent=
 Drawbridge_Blueprint_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,
-CapsuleComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Fall_Gnome_C.Physics.ConstraintsGroup,
+CapsuleComponent=
 SkeletalMeshComponent=
 PlayerStart=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Fall_Gnome_C.Physics.ConstraintsGroup,
 InstancedFoliageActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,ThirdPersonCharacter_C.Physics.ConstraintsGroup,ThirdPersonCharacter_C.Collision.Collision,ThirdPersonCharacter_C.Rendering.TextureStreaming,ThirdPersonCharacter_C.Rendering.LOD,Sewer_Ground_WATER__1__Blueprint_C.Collision.Collision,Fall_Gnome_C.Physics.ConstraintsGroup,
@@ -5743,6 +5745,8 @@ StaticMeshActor.Actor=False
 SkeletalMeshActor.Animation=True
 BubbleBoy_BP_C.Animation=True
 FileMediaSource.File=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
 
 [FEditorModeTools]
 CoordSystem=1
