level switching hotkeys
fixed level switching hotkeys, for testing purposes

--- a/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Sero_4.26/Serotopia_Grey_1 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -216,21 +216,21 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Forest
-MRUItem1=/Game/Levels/Bubbleopolis
-MRUItem2=/Game/Audio/Music/Wavs/Forest
-MRUItem3=/Game/Levels/NewSewer
-MRUItem4=/Game/Levels/Castle
-MRUItem5=/Game/Sewer/gatee
-MRUItem6=/Game/Levels/PersistentLevel
-MRUItem7=/Game/Blueprints/MySaveGame
-MRUItem8=/Game/Movies/Cutscene1
-MRUItem9=/Game/Blueprints/UI/Widgets/MainMenu
-MRUItem10=/Game/Player/ThirdPersonCharacter
+MRUItem0=/Game/Player/ThirdPersonCharacter
+MRUItem1=/Game/Levels/Forest
+MRUItem2=/Game/Levels/Bubbleopolis
+MRUItem3=/Game/Audio/Music/Wavs/Forest
+MRUItem4=/Game/Levels/NewSewer
+MRUItem5=/Game/Levels/Castle
+MRUItem6=/Game/Sewer/gatee
+MRUItem7=/Game/Levels/PersistentLevel
+MRUItem8=/Game/Blueprints/MySaveGame
+MRUItem9=/Game/Movies/Cutscene1
+MRUItem10=/Game/Blueprints/UI/Widgets/MainMenu
 MRUItem11=/Game/LadderClimb/Ladder_BP
 MRUItem12=/Game/Player/PlayerCharacter
 MRUItem13=/Game/Player/animatethishomie
@@ -3654,7 +3654,7 @@ bHideUnrelatedNodes=False
 ScreenPosition=X=624.000 Y=235.000
 ScreenPosition=X=186.000 Y=10.000
 WindowSize=X=1305.000 Y=745.000
-WindowSize=X=1585.000 Y=949.000
+WindowSize=X=1590.000 Y=954.000
 None=======
 InitiallyMaximized=True
 
@@ -5259,7 +5259,7 @@ MRUItem11=/Game/Levels/testYellow
 
 [MessageLog]
 LastLogListing=LightingResults
-LastLogListing=LoadErrors
+LastLogListing=PIE
 None=======
 Voice.TimeStamp=2021.02.05-04.34.25
 Voice.LastCompileMethod=External
